--- a/style.css
+++ b/style.css
@@ -1,9 +1,24 @@
-p {
-  font-size: 20px;
-  text-align: center;
+html {
+  background-color: #99A3A4;
 }
-#different {
-  color: #ff8b8b;
-  font-family: helvetica, sans-serif;
-  font-size: 24px;
+body {
+  background-color: #76D7C4;
+}
+.title {
+  font-size: 50px;
+  text-align: center;
+  background-color: #E74C3C;
+  color: white;
+}
+.text-info {
+  background-color: #9B59B6;
+  color: white;
+}
+p {
+  font-size: 16px;
+  text-align: center;
+  color: white;
+}
+.a1 {
+  color: grey;
 }
