--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ p,body{
 	margin:0;
 }
 h1,h2,h3,h4,h5,h6,a{
-	font-family: 'Syncopate', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	margin:0;
 }
 ul,label{
